--- a/main.html
+++ b/main.html
@@ -12,6 +12,26 @@
 
 <body>
 
+    <h1>Create this color!</h1>
+    <div id="optionBar">
+        <span></span>
+        <span id="modeToggle">HUE</span>
+    </div>
+    <div id="board">
+        <div id="red">red</div>
+        <div id="green">green</div>
+        <div id="blue">blue</div>
+        <div id="r1">r1</div>
+        <div id="g1">g1</div>
+        <div id="b1">b1</div>
+        <div id="r2">r2</div>
+        <div id="g2">g2</div>
+        <div id="b2">b2</div>
+        <div id="r3">r3</div>
+        <div id="g3">g3</div>
+        <div id="b3">b3</div>
+    </div>
+
 </body>
 
 </html>
