--- a/main.html
+++ b/main.html
@@ -7,31 +7,32 @@
     <title>Guess This Color!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
 
 <body>
 
-    <h1>Create this color!</h1>
-    <div id="optionBar">
-        <span></span>
-        <span id="modeToggle">HUE</span>
-    </div>
     <div id="board">
-        <div id="red">red</div>
-        <div id="green">green</div>
-        <div id="blue">blue</div>
-        <div id="r1">r1</div>
-        <div id="g1">g1</div>
-        <div id="b1">b1</div>
-        <div id="r2">r2</div>
-        <div id="g2">g2</div>
-        <div id="b2">b2</div>
-        <div id="r3">r3</div>
-        <div id="g3">g3</div>
-        <div id="b3">b3</div>
+        <div id="header">
+            <h1>Create this color!</h1>
+        </div>
+        <div id="optionBar">
+            <span></span>
+            <span id="modeToggle">HUE</span>
+        </div>
+        <div class="red">r1</div>
+        <div class="green">g1</div>
+        <div class="blue">b1</div>
+        <div class="red">r2</div>
+        <div class="green">g2</div>
+        <div class="blue">b2</div>
+        <div class="red">r3</div>
+        <div class="green">g3</div>
+        <div class="blue">b3</div>
+        <div id="blender">Blend</div>
     </div>
 
+
+    <script src="main.js"></script>
 </body>
 
 </html>
